.provarCaches/00Df2000001KKNJEA4/objects/Incap311__Jurisdiction__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>311 Operating Jurisdiction</description>
    <fields>
        <fullName>Incap311__City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Jurisdiction_Id__c</fullName>
        <description>Unique identifier for Jurisdiction</description>
        <inlineHelpText>Unique identifier for Jurisdiction</inlineHelpText>
        <label>Jurisdiction Id</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Incap311__State_Code__c</fullName>
        <label>State Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Jurisdiction</label>
</CustomObject>